[workspace]
members = [
]

[package]
links = "ncursesw"
name = "c2rust_out"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2018"
autobins = false

[lib]
name = "c2rust_out"
path = "c2rust-lib.rs"
crate_type = [ "rlib"]

[[bin]]
path = "example.rs"
name = "example"

[dependencies]
libc = "0.2"



